all file modified

--- a/3.frontend.html
+++ b/3.frontend.html
@@ -6,6 +6,7 @@
   <title>frontend code</title>
 </head>
 <body>
-  <h1>frontend code</h1>
+  <center><h1>frontend code</h1></center>
+ 
 </body>
 </html>
