--- a/4. backend.html
+++ b/4. backend.html
@@ -7,8 +7,6 @@
 </head>
 <body>
   <h1>backend code</h1>
-  <p>this modification happen in 3
-    
-  </p>
+  <p>this modification happen in 3</p>
 </body>
 </html>
