--- a/1.index.html
+++ b/1.index.html
@@ -8,7 +8,6 @@
 <body>
   <center><h1>This is index modification</h1></center>
   <p>this modification happen in 3</p>
-
- 
+  <h3>This Modification happen in branch master </h3>
 </body>
 </html>
