--- a/1.index.html
+++ b/1.index.html
@@ -14,5 +14,6 @@
   <h4>after the one line deleted</h4>
   after the one line deleted
   hello world this is printing right now
+  this change happen in same line
 </body>
 </html>
