reset in frontend2

--- a/1.index.html
+++ b/1.index.html
@@ -12,9 +12,7 @@
   <h4>Balakrishnan R</h4>
   <h5>dj</h5>
   <h4>after the one line deleted</h4>
-  <section>after the one line deleted
-    hello world this is printing right now</section>
-  <p>hello everyone this change in this line</p>
-  <p>this change happen in same line</p>
+  frontend 2 changes it is .it will push to main branch
+  
 </body>
 </html>
